--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Install LLVM and Clang
         run: |
           sudo apt-get update
-          sudo apt-get install -y llvm clang
+          sudo apt-get install -y llvm-14 clang-14
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
@@ -18,9 +18,11 @@ jobs:
           toolchain: 1.80.1
 
       - name: Set LLVM_CONFIG_PATH
-        run: echo "LLVM_CONFIG_PATH=$(which llvm-config)" >> $GITHUB_ENV
+        run: echo "LLVM_CONFIG_PATH=$(which llvm-config-14)" >> $GITHUB_ENV
 
       - name: Build with Cargo
+        env:
+          LLVM_CONFIG_PATH: ${{ env.LLVM_CONFIG_PATH }}
         run: cargo build --release
 
       - name: Build the Docker image
