--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,23 +34,23 @@ gltf-json = "1.4.1"
 indexmap = "2.4.0"
 zip = "2.2.0"
 clang-sys = "1.8.1"
-#[[bin]]
-#name="model_base_process"
-#path = "src/bin/model_base_process.rs"
-#
-#[[bin]]
-#name = "project_structure"
-#path = "src/bin/project_structure.rs"
-#
-#[[bin]]
-#name = "hsv_contour_detection"
-#path = "src/bin/hsv_contour_detection.rs"
+[[bin]]
+name="model_base_process"
+path = "src/bin/model_base_process.rs"
 
-#[[bin]]
-#name ="merge_model_fbx"
-#path = "src/bin/merge_model_fbx.rs"
+[[bin]]
+name = "project_structure"
+path = "src/bin/project_structure.rs"
 
-#[[bin]]
-#name = "merge_model_gltf"
-#path = "src/bin/merge_model_gltf.rs"
+[[bin]]
+name = "hsv_contour_detection"
+path = "src/bin/hsv_contour_detection.rs"
+
+[[bin]]
+name ="merge_model_fbx"
+path = "src/bin/merge_model_fbx.rs"
+
+[[bin]]
+name = "merge_model_gltf"
+path = "src/bin/merge_model_gltf.rs"
 
