--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,23 +38,23 @@ clang-sys = "1.8.1"
 name = "photosprocess"
 path = "src/lib.rs"
 
-[[bin]]
-name="model_base_process"
-path = "src/bin/model_base_process.rs"
-
-[[bin]]
-name = "project_structure"
-path = "src/bin/project_structure.rs"
-
-[[bin]]
-name = "hsv_contour_detection"
-path = "src/bin/hsv_contour_detection.rs"
-
-[[bin]]
-name ="merge_model_fbx"
-path = "src/bin/merge_model_fbx.rs"
-
-[[bin]]
-name = "merge_model_gltf"
-path = "src/bin/merge_model_gltf.rs"
+#[[bin]]
+#name="model_base_process"
+#path = "src/bin/model_base_process.rs"
+#
+#[[bin]]
+#name = "project_structure"
+#path = "src/bin/project_structure.rs"
+#
+#[[bin]]
+#name = "hsv_contour_detection"
+#path = "src/bin/hsv_contour_detection.rs"
+#
+#[[bin]]
+#name ="merge_model_fbx"
+#path = "src/bin/merge_model_fbx.rs"
+#
+#[[bin]]
+#name = "merge_model_gltf"
+#path = "src/bin/merge_model_gltf.rs"
 
