添加cookie允许，解决图片大小问题

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 #DATABASE_URL=mysql://members:Helloworld66%23%23@47.84.72.144:3306/3dRender
 DATABASE_URL=mysql://members:helloworld@8.222.253.40:3306/3dRender
-ENVIRONMENT=development
+ENVIRONMENT=PRODUCTION
 REDIS_URL=redis://:123456@8.222.253.40:6379
 PRODUCTION_DATABASE_URL=mysql://members:Helloworld66%23%23@localhost:3306/3dRender
 PRODUCTION_REDIS_URL=redis://:123456@localhost:6379
